--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ To showcase my commitment and achievements, I have actively completed final year
 
                 <div class="port-box mix product" >
                     <div class="port-image">
-                        <img src="img/api.png" alt="image" >
+                        <img src="img/api.PNG" alt="image" >
                     </div>
                     <div class="port-content">
                         <h3>Nest Department Api</h3>
@@ -383,7 +383,7 @@ To showcase my commitment and achievements, I have actively completed final year
 
                 <div class="port-box mix web">
                     <div class="port-image">
-                        <img src="img/zemenay.png" alt="">
+                        <img src="img/zemenay.PNG" alt="">
                     </div>
                     <div class="port-content">
                         <h3>Web Based Pharmacy Information Mnagement System</h3>
