--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
 
             <div class="info-box">
                 <div class="email-info">
-                    <h5>Email :</h5>
+                    <h5>Email </h5>
                     <span>tadeactor@gmail.com</span>
                 </div>
             </div>
